feat: 🎸 添加更新角色接口
